# ksaitex

./: .gitignore  ARCHITECTURE.md  README.md  debug_mapping.py  main.py  pyproject.toml  test.md  verify_sync.py
data/: tmp_shlokatest.tex  tmp_shlokatest2.tex
data/DidRamaAteMeat/: main.aux  main.tex  project.json  source_map.json
data/Vaidik_Pustak/: main.aux  main.tex  main.toc  project.json  source_map.json
data/Vibhakti_Chhutyau_Andolan/: main.aux  main.nav  main.out  main.tex  main.toc  main.vrb  project.json  source_map.json
data/कवयशसतरपसतक/: main.aux  main.tex  main.toc  project.json  source_map.json
data/वदकसहतयधययनम/: main.aux  main.tex  main.toc  source_map.json
debug/: clean_code.py  debug_regex.py
docs/: ARCHITECTURE.md  context.md  fancybk.sty  verification_plan.md  verify_upload.md
src/: doctemplates.py  fontdownload.py  latexrunner.py  mdtex.py
src/ksaitex/: cli.py
src/ksaitex/api/: main.py
src/ksaitex/compilation/: compiler.py
src/ksaitex/parsing/: markdown.py
src/ksaitex/templating/: engine.py
src/ksaitex/templating/latex/: base.fdb_latexmk  base.fls  base.tex  base_present.tex
tests/: test_tables.py
ui/: index.html
ui/css/: style.css
ui/js/: app.js
ui/js/modules/: api.js  editor.js  ui.js
